--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <script src="directives/resourceDirective.js"></script>
 <script src="directives/classDirective.js"></script>
 <script src="controllers/homeController.js"></script>
+<script src="controllers/teacherController.js"></script>
+<script src="controllers/adminController.js"></script>
 <script src="controllers/resourceControler.js"></script>
 <script src="controllers/classController.js"></script>
 <script src="controllers/studentController.js"></script>
